RESOLVED FIXED101384
[EFL] [WK2] API test crash with accelerated compositing on.
https://bugs.webkit.org/show_bug.cgi?id=101384
Summary [EFL] [WK2] API test crash with accelerated compositing on.
Viatcheslav Ostapenko
Reported 2012-11-06 12:59:44 PST
ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) /home/sl/work/webkit/Source/WTF/wtf/HashTable.h(588) : void WTF::HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::checkKey(const T&) [with HashTranslator = WTF::HashMapTranslator<WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*> >, T = void*, Key = void*, Value = WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*>, Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*> >, HashFunctions = WTF::PtrHash<void*>, Traits = WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, KeyTraits = WTF::HashTraits<void*>] 1 0xb329df6b void WTF::HashTable<void*, WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*>, WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::HashTraits<void*> >::checkKey<WTF::HashMapTranslator<WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*> >, void*>(void* const&) 2 0xb329d467 WTF::HashTableAddResult<WTF::HashTableIterator<void*, WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*>, WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::HashTraits<void*> > > WTF::HashTable<void*, WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<void*, WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*>, WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::HashTraits<void*> >::add<WTF::HashMapTranslator<WTF::HashMapValueTraits<WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >, WTF::PtrHash<void*> >, void*, WebCore::TextureMapperGLData::SharedGLData*>(void* const&, WebCore::TextureMapperGLData::SharedGLData* const&) 3 0xb329cbda WTF::HashMap<void*, WebCore::TextureMapperGLData::SharedGLData*, WTF::PtrHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >::inlineAdd(void* const&, WebCore::TextureMapperGLData::SharedGLData* const&) 4 0xb329be86 WTF::HashMap<void*, WebCore::TextureMapperGLData::SharedGLData*, WTF::PtrHash<void*>, WTF::HashTraits<void*>, WTF::HashTraits<WebCore::TextureMapperGLData::SharedGLData*> >::add(void* const&, WebCore::TextureMapperGLData::SharedGLData* const&) 5 0xb329b674 WebCore::TextureMapperGLData::SharedGLData::SharedGLData(WebCore::GraphicsContext3D*) 6 0xb329b5bf WebCore::TextureMapperGLData::SharedGLData::currentSharedGLData(WebCore::GraphicsContext3D*) 7 0xb329b943 WebCore::TextureMapperGLData::TextureMapperGLData(WebCore::GraphicsContext3D*) 8 0xb3296790 WebCore::TextureMapperGL::TextureMapperGL() 9 0xb329ac4d WebCore::TextureMapperGL::create() 10 0xb329abad WebCore::TextureMapper::platformCreateAccelerated() 11 0xb2838bcd WebCore::TextureMapper::create(WebCore::TextureMapper::AccelerationMode) 12 0xb6617de7 WebKit::LayerTreeRenderer::ensureRootLayer() 13 0xb6617f99 WebKit::LayerTreeRenderer::syncRemoteContent() 14 0xb6741563 EwkViewImpl::displayTimerFired(WebCore::Timer<EwkViewImpl>*) 15 0xb67476a2 WebCore::Timer<EwkViewImpl>::fired() 16 0xb27b6cb3 WebCore::ThreadTimers::sharedTimerFiredInternal() 17 0xb27b6bd7 WebCore::ThreadTimers::sharedTimerFired() 18 0xb3212d2f 19 0xb5ee3506 _ecore_timer_expired_call 20 0xb5ee36c4 _ecore_timer_expired_timers_call 21 0xb5edffdb 22 0xb5ee0636 ecore_main_loop_iterate 23 0x805ac3d EWK2UnitTest::EWK2UnitTestBase::waitUntilTitleChangedTo(char const*, double) 24 0x80558d5 EWK2UnitTestBase_ewk_settings_file_access_from_file_urls_allowed_Test::TestBody() 25 0xb5d50818 testing::Test::Run() 26 0xb5d50e73 testing::internal::TestInfoImpl::Run() 27 0xb5d513d5 testing::TestCase::Run() 28 0xb5d55b28 testing::internal::UnitTestImpl::RunAllTests() 29 0xb5d54a24 testing::UnitTest::Run() 30 0x805c577 main 31 0xb5a524d3 __libc_start_main Segmentation fault (core dumped)
Attachments
Patch. (2.47 KB, patch)
2012-11-06 13:10 PST, Viatcheslav Ostapenko
no flags
Updated changelog and fixed whitespace. (2.59 KB, patch)
2012-11-06 15:22 PST, Viatcheslav Ostapenko
no flags
Updated patch. (2.62 KB, patch)
2012-11-06 18:22 PST, Viatcheslav Ostapenko
no flags
Space removed. (2.62 KB, patch)
2012-11-06 19:26 PST, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2012-11-06 13:10:05 PST
Kenneth Rohde Christiansen
Comment 2 2012-11-06 14:00:20 PST
Comment on attachment 172635 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=172635&action=review > Source/WebKit2/ChangeLog:11 > + Create GL engine instead of default for API tests if webkit is compiled > + with enabled accelerated compositing and initialize GL surface in > + _ewk_view_smart_calculate if first resize and display come before > + enterAcceleratedCompositingMode call. I have a hard time understanding what you are saying here. > Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:-393 > #if USE(ACCELERATED_COMPOSITING) > // Recreate surface if needed. > - if (impl->evasGLSurface()) { > + if (impl->evasGLSurface()) > impl->clearEvasGLSurface(); > + > impl->createGLSurface(IntSize(width, height)); > - } Then now indentation is wrong
Viatcheslav Ostapenko
Comment 3 2012-11-06 15:15:08 PST
Comment on attachment 172635 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=172635&action=review >> Source/WebKit2/ChangeLog:11 >> + enterAcceleratedCompositingMode call. > > I have a hard time understanding what you are saying here. I'll try to reword it. >> Source/WebKit2/UIProcess/API/efl/ewk_view.cpp:-393 >> - } > > Then now indentation is wrong For some reason git diff didn't add this change.
Viatcheslav Ostapenko
Comment 4 2012-11-06 15:22:48 PST
Created attachment 172660 [details] Updated changelog and fixed whitespace.
Laszlo Gombos
Comment 5 2012-11-06 15:59:21 PST
Comment on attachment 172660 [details] Updated changelog and fixed whitespace. View in context: https://bugs.webkit.org/attachment.cgi?id=172660&action=review > Source/WebKit2/UIProcess/API/efl/tests/UnitTestUtils/EWK2UnitTestBase.cpp:52 > + m_ecoreEvas = ecore_evas_gl_x11_new(0, 0, 0, width, height, 0); Perhaps we use ecore_evas_new, just like in WebInspectorProxyEfl.cpp. const char* engine = "opengl_x11"; m_ecoreEvas = ecore_evas_new(engine, 0, 0, width, height, 0);
Viatcheslav Ostapenko
Comment 6 2012-11-06 18:22:45 PST
Created attachment 172689 [details] Updated patch.
Gyuyoung Kim
Comment 7 2012-11-06 18:33:38 PST
Comment on attachment 172689 [details] Updated patch. View in context: https://bugs.webkit.org/attachment.cgi?id=172689&action=review > Source/WebKit2/ChangeLog:3 > + [EFL] [WK2] API test crash with accelerated compositing on. Please remove a space between [EFL][WK2]
Viatcheslav Ostapenko
Comment 8 2012-11-06 19:26:32 PST
Created attachment 172702 [details] Space removed.
Gyuyoung Kim
Comment 9 2012-11-06 21:56:33 PST
Comment on attachment 172702 [details] Space removed. Looks make sense.
WebKit Review Bot
Comment 10 2012-11-06 22:31:47 PST
Comment on attachment 172702 [details] Space removed. Clearing flags on attachment: 172702 Committed r133723: <http://trac.webkit.org/changeset/133723>
WebKit Review Bot
Comment 11 2012-11-06 22:31:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.