Source/WebKit2/UIProcess/API/efl/tests/UnitTestUtils/EWK2UnitTestBase.cpp
@@ -48,7 +48,12 @@ void EWK2UnitTestBase::SetUp()
     unsigned int width = environment->defaultWidth();
     unsigned int height = environment->defaultHeight();
 
+#if defined(WTF_USE_ACCELERATED_COMPOSITING) && defined(HAVE_ECORE_X)
+    const char* engine = "opengl_x11";
+    m_ecoreEvas = ecore_evas_new(engine, 0, 0, width, height, 0);
+#else
     m_ecoreEvas = ecore_evas_new(0, 0, 0, width, height, 0);
+#endif
 
     ecore_evas_show(m_ecoreEvas);
     Evas* evas = ecore_evas_get(m_ecoreEvas);
